[package]
name = "rust-image-hidden-message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.3"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
crc = "3.1.0"
image = "0.24.8"
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
